# vanmongo

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: checks.yml
satel_mongo/: __init__.py  client.py  collection.py  connection.py  document.py  events.py  main.py
tests/: conftest.py  test_aggregate.py  test_client.py  test_connection.py  test_events.py  test_index.py  test_search.py  test_sort.py
vanmongo/: __init__.py  collection.py  connection.py  document.py  main.py
