[tool.poetry]
name = "satel_mongo"
version = "0.1.0"
description = ""
authors = ["Quinn Blenkinsop <quinn@blenkinsop.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
motor = "^2.4.0"
shortuuid = "^1.0.1"
aiodataloader = "^0.2.0"
aiostream = "^0.4.3"
async-search-client = "^0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.5b2"
isort = "^5.8.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-watch = "^4.2.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flit.metadata]
module = "vanmongo"
author = "Quinn Blenkinsop"
author-email = "quinn@blenkinsop.net"
home-page = "https://github.com/SatelCreative/vanmongo"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
